--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.26.6",
+    "axios": "^1.10.0",
+    "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
