--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.2",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
