--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-select": "^5.10.2",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
